<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Service Assistant</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>History</item>
        <item>Tracts</item>
        <item>Return Visits</item>
        <item>Pages</item>
        <item>What\'s Hot</item>
    </string-array>
    <string-array name="publications">
        <item>What does the Bible Really Teach?</item>


        <item>How Do You View the Future?</item>
        <item>What Is the Key to Happy Family Life?</item>
        <item>Who Really Controls the World?</item>
        <item>Will Suffering Ever End?</item>
        <item>Can the Dead Really Live Again?</item>

        <item>Listen to God</item>
        <item>Listen to God and Live Forever</item>
        <item>You Can Be God\'s Friend</item>
        <item>How Can You Have a Happy Life?</item>
        <item>Good News From God!</item>

        <item>Watchtower &amp; Awake</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_history64</item>
        <item>@drawable/ic_tractcounter64</item>
        <item>@drawable/ic_communities</item>
        <item>@drawable/ic_pages</item>
        <item>@drawable/ic_whats_hot</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="HourCountLabel">You have</string>
    <string name="Hours">Hours</string>
    <string name="SetAGoalButton">Set a goal</string>
    <string name="EnterAGoal">Enter a goal for the month</string>
    <string name="CancelButton">Cancel</string>
    <string name="saveButton">Save</string>
    <string name="resetMenu">Reset</string>
    <string name="title_activity_details_page">DetailsPage</string>
    <string name="magazinelabel">Magazines</string>
    <string name="rvlabel">Return Visits</string>
    <string name="Share">Share</string>
    <string name="bookLabel">Books</string>
    <string name="brochures">Brochures</string>
    <string name="Books">Books</string>
    <string name="old_record_deletion">Old Record Deletion</string>
    <string name="old_record_deletion_desc">If enabled, the app will automatically delete records that more than 12 months old</string>
    <string name="auto_sync">Auto-Sync</string>
    <string name="colors">Choose a color</string>
    <string name="customization">Customization</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addressHint">Address</string>
    <string name="saveButton1">Save</string>
    <string name="title_activity_maps">mapsActivity</string>
    <string name="pref_header_location">Location</string>
    <string name="default_city">Set a default city for Return Visit addresses</string>
    <string name="default_city_title">Default City</string>
    <string name="default_state_title">Default State</string>
    <string name="default_state">Sets a default state for Return Visit addresses e.g.(KY)</string>
    <string name="title_activity_return_visit_viewer">ReturnVisitViewer</string>
    <string name="placed">Placed: </string>
    <string name="dayofweek">Day of the week: </string>
    <string name="startBtn">Start</string>
    <string name="stop">Stop</string>
    <string name="add">Add</string>

</resources>
