<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Main"
    android:background="#009688"
    android:clickable="false">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView2"
        android:background="#009688">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="1000sp"
            android:background="#009688">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:id="@+id/linearLayout"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/HourCountLabel"
                    android:id="@+id/HourLabel11"
                    android:textSize="50sp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal|top"
                    android:textColor="#e0f2f1"
                    />

                <TextSwitcher
                    android:layout_width="match_parent"
                    android:layout_height="195dp"
                    android:id="@+id/textSwitcher2"
                    android:layout_gravity="center_horizontal|top" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/Hours"
                    android:id="@+id/HourLabel1"
                    android:textSize="50sp"
                    android:gravity="center"
                    android:textAlignment="gravity"
                    android:layout_marginBottom="10dp"
                    android:layout_above="@+id/goalButton"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="false"
                    android:textColor="#e0f2f1" />

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/SetAGoalButton"
                    android:id="@+id/goalButton"
                    android:onClick="dialogBox"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="25dp"
                    android:textColor="#e0f2f1"
                    android:background="#00796b" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:id="@+id/MainGoalLabel"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_gravity="center_horizontal"
                        android:textColor="#e0f2f1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:id="@+id/HoursToGo"
                        android:layout_row="1"
                        android:layout_column="18"
                        android:gravity="top"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:layout_gravity="center_horizontal"
                        android:textColor="#e0f2f1" />

                    <ProgressBar
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:id="@+id/GoalBar"
                        android:layout_row="0"
                        android:layout_column="23"
                        android:layout_below="@+id/scrollView2"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:indeterminate="false"
                        android:max="50"
                        android:progressDrawable="@drawable/circular_progress_bar"
                        android:layout_gravity="center_horizontal" />


                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="0"
                android:id="@+id/magazineCounter"
                android:textSize="50dp"
                android:layout_marginTop="78dp"
                android:layout_below="@+id/linearLayout"
                android:layout_alignRight="@+id/maglabel"
                android:layout_alignEnd="@+id/maglabel"
                android:textColor="#e0f2f1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/magazinelabel"
                android:id="@+id/maglabel"
                android:layout_below="@+id/magazineCounter"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="30dp"
                android:textColor="#e0f2f1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="0"
                android:id="@+id/rvcounter"
                android:textSize="50dp"
                android:layout_marginLeft="115dp"
                android:layout_above="@+id/rvlabel"
                android:layout_toRightOf="@+id/magazineCounter"
                android:textColor="#e0f2f1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/rvlabel"
                android:id="@+id/rvlabel"
                android:layout_below="@+id/magazineCounter"
                android:layout_alignLeft="@+id/rvcounter"
                android:layout_alignStart="@+id/rvcounter"
                android:textColor="#e0f2f1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="0"
                android:id="@+id/brochureCounter"
                android:layout_marginTop="42dp"
                android:textSize="50dp"
                android:layout_below="@+id/maglabel"
                android:layout_alignRight="@+id/maglabel"
                android:layout_alignEnd="@+id/maglabel"
                android:textColor="#e0f2f1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/brochures"
                android:id="@+id/brochureLabel"
                android:layout_below="@+id/brochureCounter"
                android:layout_alignRight="@+id/brochureCounter"
                android:layout_alignEnd="@+id/brochureCounter"
                android:textColor="#e0f2f1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="0"
                android:id="@+id/bookCounter"
                android:textSize="50dp"
                android:layout_alignBottom="@+id/brochureCounter"
                android:layout_alignLeft="@+id/rvlabel"
                android:layout_alignStart="@+id/rvlabel"
                android:textColor="#e0f2f1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/Books"
                android:id="@+id/bookLabel"
                android:layout_alignTop="@+id/brochureLabel"
                android:layout_alignLeft="@+id/bookCounter"
                android:layout_alignStart="@+id/bookCounter"
                android:textColor="#e0f2f1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/HourCount"
                android:text="0"
                android:textSize="175sp"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:gravity="center"
                android:textIsSelectable="false"
                android:onClick="tapAdd"
                android:clickable="true"
                android:numeric="integer"
                android:visibility="invisible"
                android:layout_alignTop="@+id/magazineCounter"
                android:layout_toRightOf="@+id/magazineCounter" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
